- Added support for Grammars
  
  # grammar is a class, rule is a method
  my $match = Grammar->rule( $str );  
  my $match = rule( 'Grammar', $str );  
  
  # grammar is an object, rule is a method
  my $match = $grammar->rule( $str );  
  
  # grammar is a class, rule is an object (unnamed rule)
  my $match = $rule->match( 'Grammar', $str );  
  
  # grammar is an object (unnamed grammar), rule is an object (unnamed rule)
  my $match = $rule->match( $grammar, $str );  
  
  Note that methods do not accept arbitrary names (unlike variables and subroutines)
  
Internals:

- Rules are methods
- Simplified 'match', 'capture' keys in internal Match

0.01 
- Initial CPAN release - Pod, Tests, Packaging by audreyt & others.